# tipster

./: .coverage  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  tests.yml
tests/: __init__.py  test_ai.py  test_cmd.py  test_config.py  test_storage.py
tipster/: __main__.py  cmd_output.py  config.py  storage.py
tipster/ai/: __init__.py  anthropic.py  core.py  deepseek.py  gemini.py  glm.py  ollama.py  openai.py
tipster/cmd/: __init__.py  config_cmd.py  export.py  fav.py  import_cmd.py  search.py  tips.py  today.py  topics.py  version.py
