[project]
name = "tipster"
version = "0.1.0"
description = "AI-powered CLI tip generator for topics you care about"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["cli", "ai", "tips", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "textual>=0.100.0",
]

[dependency-group]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
tipster = "tipster.__main__:cli"

[project.urls]
Homepage = "https://github.com/tiakas/tipster"
Repository = "https://github.com/tiakas/tipster"
Issues = "https://github.com/tiakas/tipster/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tipster"]
